# packrinth

./: .SRCINFO  .gitignore  CHANGELOG.md  CLI_HELP.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  release-plz.toml
.github/workflows/: cargo-build.yml  cargo-clippy.yml  cargo-test.yml  cargo.yml  pages.yml  release-binaries.yml  release-plz.yml
docs/: _config.yml  cli-help.md  configuration-reference.md  full-guide.md  generating-documentation.md  getting-started.md  index.md  loaders.md  manual-files.md  shell-completion.md  tweaking-projects.md
docs/_includes/: nav_footer_custom.html
site/: _config.yml  cli-help.md  configuration-reference.md  full-guide.md  generating-documentation.md  importing-a-modpack.md  index.md  manual-files.md
src/: cli.rs  config.rs  crates_io.rs  json.rs  lib.rs  main.rs  modrinth.rs  request.rs  subcommand.rs  utils.rs
src/json/: config.rs  modrinth.rs
tests/: modrinth_integration_tests.rs
