[package]
name = "packrinth"
description = "CLI tool for creating and maintaining your own Minecraft modpack"
homepage = "https://thijzert123.github.io/packrinth"
repository = "https://github.com/Thijzert123/packrinth"
readme = "README.md"
keywords = ["cli", "minecraft", "modpack", "modrinth"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Thijzert <184778919+Thijzert123@users.noreply.github.com>"]
license = "MIT"
version = "0.2.0"
edition = "2024"
include = ["src/", "*.md"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
serde_json = "1.0.143"
clap = { version = "4.5.46", features = ["derive"] }
dialoguer = "0.12.0"
zip = "4.6.0"
walkdir = "2.5.0"
progress_bar = "1.3.0"
terminal_size = "0.4.3"
console = "0.16.0"
indexmap = { version = "2.11.0", features = ["serde"] }
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
clap_complete = "4.5.57"
gix = "0.73.0"
semver = "1.0.26"

[build-dependencies]
clap = { version = "4.5.46", features = ["derive"] }
clap-markdown = "0.1.5"
