[package]
name = "packrinth"
description = "CLI tool for creating and maintaining your own Minecraft modpack"
homepage = "https://packrinth.thijzert.nl"
repository = "https://github.com/Thijzert123/packrinth"
readme = "README.md"
keywords = ["cli", "minecraft", "modpack", "modrinth"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Thijzert <184778919+Thijzert123@users.noreply.github.com>"]
license = "MIT"
version = "0.7.5"
edition = "2024"
rust-version = "1.88.0"
include = ["src/", "*.md"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
zip = "5.1.1"
walkdir = "2.5.0"
progress_bar = "1.4.0"
terminal_size = "0.4.3"
console = "0.16.1"
indexmap = { version = "2.11.4", features = ["serde"] }
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
clap_complete = "4.5.58"
gix = "0.73.0"
semver = "1.0.27"

[build-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap-markdown = "0.1.5"

[dev-dependencies]
tempdir = "0.3.7"
