[package]
name = "packrinth"
description = "CLI tool for creating and maintaining your own Minecraft modpack"
homepage = "https://packrinth.thijzert.nl"
repository = "https://github.com/Thijzert123/packrinth"
readme = "README.md"
keywords = ["cli", "minecraft", "modpack", "modrinth"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Thijzert <184778919+Thijzert123@users.noreply.github.com>"]
license = "MIT"
version = "0.8.3"
edition = "2024"
rust-version = "1.88.0"
include = ["src/", "*.md"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "blocking"] }
serde_json = "1.0.149"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
zip = "7.0.0"
walkdir = "2.5.0"
progress_bar = "1.4.0"
terminal_size = "0.4.3"
console = "0.16.2"
indexmap = { version = "2.13.0", features = ["serde"] }
reqwest-retry = "0.9.0"
reqwest-middleware = "0.4.2"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread"] }
clap_complete = "4.5.65"
gix = "0.73.0"
semver = "1.0.27"

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap-markdown = "0.1.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempdir = "0.3.7"
